--- a/css/main-portfolio.css
+++ b/css/main-portfolio.css
@@ -1,24 +1,24 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #dcdcdc;
+  background-color: #ab9f9d;
   font-family: 'Open Sans', sans-serif;
 }
 
+/* Header Section */
 .header {
   display: flex;
   justify-content: space-around;
   padding-top: 20px;
   padding-bottom: 30px;
-  /*background-color: #46c9b6;*/
-  background-color: #204056;
+  background-color: #3c4f76;
   position: fixed;
   top: 0;
   width: 100%;
 }
 
-h1 {
-  font-size: 50px;
+.header h1 {
+  font-size: 56px;
   font-family: 'Lobster', cursive;
   margin: 0;
   padding: 0;
@@ -26,14 +26,14 @@ h1 {
   color: #fff;
 }
 
+/* Menu Buttons */
 .btnGrp {
   display: flex;
   justify-content: space-around;
   padding-top: 10px;
   padding-bottom: 10px;
 }
-
-.btn {
+.bttnn {
   margin-right: 20px;
   padding-right: 33px;
   padding-left: 33px;
@@ -42,26 +42,28 @@ h1 {
   border: 3px solid #fff;
   cursor: pointer;
 }
-
-.btn:focus {
+.bttnn:focus {
   outline: 0;
 }
-
 .active{
   background-color: #fff;
   color: #204056;
 }
 
-.jumbotron {
-  width: 87%;
+.main {
+  max-width: 1080px;
   margin: 100px auto 0;
-  /*background-color: #f5f5f5;*/
-  background-color: #ebebeb;
+  padding: 0;
+  background-color: #d9dfe3;
+  /*background-color: #ebebeb;*/
 }
 
+/* About Section */
 .about {
   display: flex;
-  background-color: #a5a4a4;
+  background-color: #717c89;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 #aboutTxt {
@@ -71,30 +73,39 @@ h1 {
   color: #fff;
 }
 
-#aboutTxt h4 {
-  font-size: 20px;
-  padding-bottom: 50px;
+#aboutTxt #title {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 40px;
+  margin-bottom: 15px;
+  margin-top: 0;
+}
+
+#aboutTxt #intro {
+  font-size: 19px;
+  padding-bottom: 30px;
   border-bottom: 5px solid #fff;
 }
 
-#aboutTxt p {
+#aboutTxt #btmLine {
   font-size: 18px;
 }
 
+/* Main image in About Section */
 #imgContainer {
-  padding: 85px 50px 50px 50px;
+  padding: 30px;
   text-align: center;
   width: 35%;
 }
 
 #placeholderImg {
   display: block;
-  height: 220px;
-  width: 220px;
+  height: 235px;
+  width: 235px;
   border-radius: 100%;
-  margin: 0 auto;
+  margin: 23px auto 0;
 }
 
+/* Portfolio Section */
 .row {
   width: 96%;
   margin: 10px auto;
@@ -108,7 +119,7 @@ h1 {
 
 .portfolio {
   text-align: center;
-  padding-bottom: 50px;
+  padding-bottom: 15px;
   padding-top: 20px;
 }
 
@@ -116,18 +127,44 @@ h1 {
   font-size: 35px;
   margin: 40px auto 60px;
   padding-bottom: 20px;
-  border-bottom: 5px solid #b2b2a9;
+  border-bottom: 5px solid #ab9f9d;
   width: 30%;
 }
 
 .portfolio .row .plcImg {
   height: 220px;
   width: 300px;
-  border: 4px solid #9a999e;
+  border: 4px solid  #ab9f9d;
+}
+.proj {
+  text-align: center;
+}
+.blurb {
+  font-size: 13px;
+  margin: 7px auto 3px;
+  width: 250px;
 }
 
+.linksBin {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  padding-bottom: 5px;
+}
+.link {
+  font-size: 14px;
+  padding: 5px 3px;
+}
+#linkOne {
+  border-right: 1px solid #ab9f9d;
+}
+#linkTwo {
+  border-left: 1px solid #ab9f9d;
+}
+
+/* Contact Section */
 .contact {
-  border-top: 2px solid #b2b2a9;
+  border-top: 2px solid #ab9f9d;
   text-align: center;
   padding-top: 20px;
   padding-bottom: 50px;
@@ -137,53 +174,48 @@ h1 {
   font-size: 35px;
   margin: 40px auto 60px;
   padding-bottom: 20px;
-  border-bottom: 5px solid #b2b2a9;
+  border-bottom: 5px solid #ab9f9d; /*#b2b2a9;*/
   width: 30%;
 }
 
 .contactContent {
   display: flex;
+  justify-content: center;
   padding-bottom: 40px;
 }
 
-.contactContent form {
-  width: 50%;
-  padding: 0;
-  border-right: 2px solid #b2b2a9;
-}
-
-.contactContent form input {
- width: 75%;
- margin-bottom: 5px;
- font-size: 16px;
- padding: 15px 0 10px 10px;
-}
-
-textarea {
-  width: 75%;
-  padding: 20px 0 20px 10px;
-  font-size: 16px;
-}
-
-.btnSml {
-  padding: 10px 30px;
-  margin-left: 14%;
-}
-
-.contactContent div {
+.contactLeft {
   width: 40%;
-  padding-left: 30px;
+  text-align: center;
+  border-right: 1px solid #ab9f9d;
+  padding: 20px;
+}
+.contactLeft h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 58px;
+  margin-top: 0;
+}
+.contactLeft i {
+  font-size: 46px;
+  cursor: pointer;
+}
+
+.contactContent .contactMsg {
+  width: 40%;
+  border-left: 1px solid #ab9f9d; /*#b2b2a9;*/
+  padding: 20px;
   text-align: left;
 }
 
-.contactContent div p {
-  font-size: 22px;
+.contactContent .contactMsg p {
+  font-size: 18px;
   padding-left: 40px;
   margin-top: 0;
 }
 
+/* Footers */
 .footerOne {
-  background-color: #a5a4a4;
+  background-color: #717c89;
   text-align: center;
   display: flex;
   justify-content: space-around;
@@ -197,17 +229,14 @@ textarea {
   justify-content: space-around;
 }
 
-.iconsBin img {
-  background-color: #fff;
-  height: 31px;
-  width: 42px;
-  border-radius: 30%;
-  padding: 12px;
+.iconsBin i {
+  color: #fff;
+  font-size: 42px;
   cursor: pointer;
 }
 
 .footerTwo {
-  background-color: #204056;
+  background-color: #3c4f76;
   text-align: center;
   color: #fff;
 }
@@ -235,7 +264,7 @@ textarea {
   }
 }
 
-@media (max-width: 785px) {
+@media (max-width: 850px) {
   .header {
     flex-wrap: wrap;
     justify-content: center;
@@ -243,13 +272,13 @@ textarea {
   .btnGrp {
     margin-top: 20px;
   }
-  .btn {
+  .bttnn {
     padding-top: 12px;
     padding-bottom: 12px;
     margin-left: 15px;
     margin-right: 15px
   }
-  .jumbotron {
+  .main {
     margin-top: 165px;
   }
   .about {
@@ -258,33 +287,97 @@ textarea {
   }
   #aboutTxt {
     width: 75%;
-    font-size: 18px;
-    padding-top: 10px;
+    padding: 10px 5px;
     margin: 0 auto;
     text-align: center;
   }
+  #aboutTxt #intro {
+    font-size: 15px;
+  }
+  #aboutTxt #btmLine {
+    font-size: 15px;
+  }
   #imgContainer {
     width: 100%;
-    padding-top: 65px;
+    padding-top: 40px;
     padding-bottom: 20px;
   }
-  .contactContent div p {
+  .contactContent .contactMsg p {
     font-size: 16px;
-    padding-left: 10px;
-    padding-top: 0;
+    padding: 0;
     margin-top: 0;
+    margin-bottom: 0;
   }
-  .btnSml {
-    margin-left: 2%;
+  /* Contact Section */
+  .contact h2 {
+    margin-bottom: 60px;
   }
-  /*.contactContent {
+  .contactContent {
+    display: block;
+    padding-bottom: 0;
+  }
+  .contactContent .contactLeft {
+    width: 70%;
+    padding-top: 0;
+    margin: 10px auto;
+    border-right: none;
+  }
+  .contactContent .contactMsg {
+    width: 70%;
+    text-align: center;
+    padding: 0;
+    margin: 10px auto;
+    border-left: none;
+  }
+  .footerOne {
     flex-wrap: wrap;
     justify-content: center;
   }
-  .contactContent form {
-    display: block;
-    /*width: 50%;
-    padding: 0;
-    border-right: none;
-  }*/
+  #item1 {
+    padding: 20px;
+    margin-bottom: 40px;
+  }
+  #item1 h4 {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 455px) {
+  #aboutTxt #title {
+    font-size: 32px;
+  }
+  #aboutTxt #intro {
+    font-size: 14px;
+  }
+  #aboutTxt #btmLine {
+    font-size: 14px;
+  }
+  .bttnn {
+    margin-right: 0;
+    margin-left: 0;
+    padding: 5px 15px;
+  }
+  .header h1 {
+    font-size: 42px;
+    margin-bottom: 10px;
+    margin-top: 18px;
+  }
+  .portfolio h2 {
+    font-size: 25px;
+  }
+  .contact h2 {
+    font-size: 25px;
+  }
+  .contactContent .contactLeft h1 {
+    font-size: 34px;
+  }
+  .contactContent .contactMsg p {
+    font-size: 14px;
+  }
+  .footerOne h2 {
+    font-size: 24px;
+  }
+  .iconsBin i {
+    font-size: 28px;
+  }
 }
